[gd_scene load_steps=4 format=3 uid="uid://d1d4sda2toruk"]

[ext_resource type="Theme" uid="uid://ir4rfq0nqkt0" path="res://Assets/UI/UITheme.tres" id="1_v421x"]
[ext_resource type="Script" path="res://Scenes/achievement.gd" id="2_es5ej"]
[ext_resource type="Texture2D" uid="uid://v4uwrxom646t" path="res://Assets/UI/no.png" id="2_x7vuu"]

[node name="Achievement" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_v421x")
script = ExtResource("2_es5ej")

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -396.0
offset_top = -226.0
offset_right = 383.0
offset_bottom = 246.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainPanel"]
layout_mode = 0
offset_left = 36.0
offset_top = 16.0
offset_right = 762.0
offset_bottom = 453.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/ScrollContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="Level" type="HBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Level1" type="Panel" parent="MainPanel/ScrollContainer/VBoxContainer/Level"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 0

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Level/Level1"]
layout_mode = 0
offset_left = 16.0
offset_top = 37.0
offset_right = 274.0
offset_bottom = 59.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Selesai Peringkat 1"

[node name="TextureRect" type="TextureRect" parent="MainPanel/ScrollContainer/VBoxContainer/Level/Level1"]
layout_mode = 0
offset_left = 281.0
offset_top = 30.0
offset_right = 321.0
offset_bottom = 70.0
texture = ExtResource("2_x7vuu")

[node name="Level2" type="Panel" parent="MainPanel/ScrollContainer/VBoxContainer/Level"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 8

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Level/Level2"]
layout_mode = 0
offset_left = 16.0
offset_top = 37.0
offset_right = 274.0
offset_bottom = 59.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Selesai Peringkat 2"

[node name="TextureRect" type="TextureRect" parent="MainPanel/ScrollContainer/VBoxContainer/Level/Level2"]
layout_mode = 0
offset_left = 281.0
offset_top = 30.0
offset_right = 321.0
offset_bottom = 70.0
texture = ExtResource("2_x7vuu")

[node name="Level2" type="HBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Level3" type="Panel" parent="MainPanel/ScrollContainer/VBoxContainer/Level2"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 0

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Level2/Level3"]
layout_mode = 0
offset_left = 16.0
offset_top = 37.0
offset_right = 274.0
offset_bottom = 59.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Selesai Peringkat 3"

[node name="TextureRect" type="TextureRect" parent="MainPanel/ScrollContainer/VBoxContainer/Level2/Level3"]
layout_mode = 0
offset_left = 281.0
offset_top = 30.0
offset_right = 321.0
offset_bottom = 70.0
texture = ExtResource("2_x7vuu")

[node name="Level4" type="Panel" parent="MainPanel/ScrollContainer/VBoxContainer/Level2"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 8

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Level2/Level4"]
layout_mode = 0
offset_left = 16.0
offset_top = 37.0
offset_right = 274.0
offset_bottom = 59.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Selesai Peringkat 4"

[node name="TextureRect" type="TextureRect" parent="MainPanel/ScrollContainer/VBoxContainer/Level2/Level4"]
layout_mode = 0
offset_left = 281.0
offset_top = 30.0
offset_right = 321.0
offset_bottom = 70.0
texture = ExtResource("2_x7vuu")

[node name="Level3" type="HBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Level5" type="Panel" parent="MainPanel/ScrollContainer/VBoxContainer/Level3"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 0

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Level3/Level5"]
layout_mode = 0
offset_left = 16.0
offset_top = 37.0
offset_right = 274.0
offset_bottom = 59.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Selesai Peringkat 5"

[node name="TextureRect" type="TextureRect" parent="MainPanel/ScrollContainer/VBoxContainer/Level3/Level5"]
layout_mode = 0
offset_left = 281.0
offset_top = 30.0
offset_right = 321.0
offset_bottom = 70.0
texture = ExtResource("2_x7vuu")

[node name="Level6" type="Panel" parent="MainPanel/ScrollContainer/VBoxContainer/Level3"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 8

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Level3/Level6"]
layout_mode = 0
offset_left = 16.0
offset_top = 37.0
offset_right = 274.0
offset_bottom = 59.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Selesai Peringkat 6"

[node name="TextureRect" type="TextureRect" parent="MainPanel/ScrollContainer/VBoxContainer/Level3/Level6"]
layout_mode = 0
offset_left = 281.0
offset_top = 30.0
offset_right = 321.0
offset_bottom = 70.0
texture = ExtResource("2_x7vuu")

[node name="Quiz4" type="HBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Quiz1" type="Panel" parent="MainPanel/ScrollContainer/VBoxContainer/Quiz4"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 0

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Quiz4/Quiz1"]
layout_mode = 0
offset_left = 16.0
offset_top = 37.0
offset_right = 274.0
offset_bottom = 82.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Jawab Semua Kuiz Peringkat 1 Dengan Betul"

[node name="TextureRect" type="TextureRect" parent="MainPanel/ScrollContainer/VBoxContainer/Quiz4/Quiz1"]
layout_mode = 0
offset_left = 281.0
offset_top = 30.0
offset_right = 321.0
offset_bottom = 70.0
texture = ExtResource("2_x7vuu")

[node name="Quiz2" type="Panel" parent="MainPanel/ScrollContainer/VBoxContainer/Quiz4"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 8

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Quiz4/Quiz2"]
layout_mode = 0
offset_left = 16.0
offset_top = 37.0
offset_right = 274.0
offset_bottom = 82.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Jawab Semua Kuiz Peringkat 2 Dengan Betul"

[node name="TextureRect" type="TextureRect" parent="MainPanel/ScrollContainer/VBoxContainer/Quiz4/Quiz2"]
layout_mode = 0
offset_left = 281.0
offset_top = 30.0
offset_right = 321.0
offset_bottom = 70.0
texture = ExtResource("2_x7vuu")

[node name="Quiz5" type="HBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Quiz3" type="Panel" parent="MainPanel/ScrollContainer/VBoxContainer/Quiz5"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 0

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Quiz5/Quiz3"]
layout_mode = 0
offset_left = 16.0
offset_top = 37.0
offset_right = 274.0
offset_bottom = 82.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Jawab Semua Kuiz Peringkat 3 Dengan Betul"

[node name="TextureRect" type="TextureRect" parent="MainPanel/ScrollContainer/VBoxContainer/Quiz5/Quiz3"]
layout_mode = 0
offset_left = 281.0
offset_top = 30.0
offset_right = 321.0
offset_bottom = 70.0
texture = ExtResource("2_x7vuu")

[node name="Quiz4" type="Panel" parent="MainPanel/ScrollContainer/VBoxContainer/Quiz5"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 8

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Quiz5/Quiz4"]
layout_mode = 0
offset_left = 16.0
offset_top = 37.0
offset_right = 274.0
offset_bottom = 82.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Jawab Semua Kuiz Peringkat 4 Dengan Betul"

[node name="TextureRect" type="TextureRect" parent="MainPanel/ScrollContainer/VBoxContainer/Quiz5/Quiz4"]
layout_mode = 0
offset_left = 281.0
offset_top = 30.0
offset_right = 321.0
offset_bottom = 70.0
texture = ExtResource("2_x7vuu")

[node name="Quiz6" type="HBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Quiz5" type="Panel" parent="MainPanel/ScrollContainer/VBoxContainer/Quiz6"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 0

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Quiz6/Quiz5"]
layout_mode = 0
offset_left = 16.0
offset_top = 37.0
offset_right = 274.0
offset_bottom = 82.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Jawab Semua Kuiz Peringkat 5 Dengan Betul"

[node name="TextureRect" type="TextureRect" parent="MainPanel/ScrollContainer/VBoxContainer/Quiz6/Quiz5"]
layout_mode = 0
offset_left = 281.0
offset_top = 30.0
offset_right = 321.0
offset_bottom = 70.0
texture = ExtResource("2_x7vuu")

[node name="Quiz6" type="Panel" parent="MainPanel/ScrollContainer/VBoxContainer/Quiz6"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 8

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Quiz6/Quiz6"]
layout_mode = 0
offset_left = 16.0
offset_top = 37.0
offset_right = 274.0
offset_bottom = 82.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Jawab Semua Kuiz Peringkat 6 Dengan Betul"

[node name="TextureRect" type="TextureRect" parent="MainPanel/ScrollContainer/VBoxContainer/Quiz6/Quiz6"]
layout_mode = 0
offset_left = 281.0
offset_top = 30.0
offset_right = 321.0
offset_bottom = 70.0
texture = ExtResource("2_x7vuu")

[node name="Coin7" type="HBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Coin1" type="Panel" parent="MainPanel/ScrollContainer/VBoxContainer/Coin7"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 0

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Coin7/Coin1"]
layout_mode = 0
offset_left = 16.0
offset_top = 37.0
offset_right = 274.0
offset_bottom = 82.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Kumpul Semua Syiling di Peringkat 1"

[node name="TextureRect" type="TextureRect" parent="MainPanel/ScrollContainer/VBoxContainer/Coin7/Coin1"]
layout_mode = 0
offset_left = 281.0
offset_top = 30.0
offset_right = 321.0
offset_bottom = 70.0
texture = ExtResource("2_x7vuu")

[node name="Coin2" type="Panel" parent="MainPanel/ScrollContainer/VBoxContainer/Coin7"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 8

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Coin7/Coin2"]
layout_mode = 0
offset_left = 16.0
offset_top = 37.0
offset_right = 274.0
offset_bottom = 82.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Kumpul Semua Syiling di Peringkat 2"

[node name="TextureRect" type="TextureRect" parent="MainPanel/ScrollContainer/VBoxContainer/Coin7/Coin2"]
layout_mode = 0
offset_left = 281.0
offset_top = 30.0
offset_right = 321.0
offset_bottom = 70.0
texture = ExtResource("2_x7vuu")

[node name="Coin8" type="HBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Coin3" type="Panel" parent="MainPanel/ScrollContainer/VBoxContainer/Coin8"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 0

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Coin8/Coin3"]
layout_mode = 0
offset_left = 16.0
offset_top = 37.0
offset_right = 274.0
offset_bottom = 82.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Kumpul Semua Syiling di Peringkat 3"

[node name="TextureRect" type="TextureRect" parent="MainPanel/ScrollContainer/VBoxContainer/Coin8/Coin3"]
layout_mode = 0
offset_left = 281.0
offset_top = 30.0
offset_right = 321.0
offset_bottom = 70.0
texture = ExtResource("2_x7vuu")

[node name="Coin4" type="Panel" parent="MainPanel/ScrollContainer/VBoxContainer/Coin8"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 8

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Coin8/Coin4"]
layout_mode = 0
offset_left = 16.0
offset_top = 37.0
offset_right = 274.0
offset_bottom = 82.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Kumpul Semua Syiling di Peringkat 4"

[node name="TextureRect" type="TextureRect" parent="MainPanel/ScrollContainer/VBoxContainer/Coin8/Coin4"]
layout_mode = 0
offset_left = 281.0
offset_top = 30.0
offset_right = 321.0
offset_bottom = 70.0
texture = ExtResource("2_x7vuu")

[node name="Coin9" type="HBoxContainer" parent="MainPanel/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Coin5" type="Panel" parent="MainPanel/ScrollContainer/VBoxContainer/Coin9"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 0

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Coin9/Coin5"]
layout_mode = 0
offset_left = 16.0
offset_top = 37.0
offset_right = 274.0
offset_bottom = 82.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Kumpul Semua Syiling di Peringkat 5"

[node name="TextureRect" type="TextureRect" parent="MainPanel/ScrollContainer/VBoxContainer/Coin9/Coin5"]
layout_mode = 0
offset_left = 281.0
offset_top = 30.0
offset_right = 321.0
offset_bottom = 70.0
texture = ExtResource("2_x7vuu")

[node name="Coin6" type="Panel" parent="MainPanel/ScrollContainer/VBoxContainer/Coin9"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 2
size_flags_horizontal = 8

[node name="RichTextLabel" type="RichTextLabel" parent="MainPanel/ScrollContainer/VBoxContainer/Coin9/Coin6"]
layout_mode = 0
offset_left = 16.0
offset_top = 37.0
offset_right = 274.0
offset_bottom = 82.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Kumpul Semua Syiling di Peringkat 6"

[node name="TextureRect" type="TextureRect" parent="MainPanel/ScrollContainer/VBoxContainer/Coin9/Coin6"]
layout_mode = 0
offset_left = 281.0
offset_top = 30.0
offset_right = 321.0
offset_bottom = 70.0
texture = ExtResource("2_x7vuu")

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 10.0
offset_right = 140.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 30
text = "Kembali"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
